# agent

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.sh
agent/: brain.py  config.py  models.py  scheduler.py  users.py
agent/frontends/: cli.py  formatters.py  rate_limiter.py  telegram_bot.py
agent/jobs/: email_finder.py  linkedin_cookie_session.py  linkedin_session.py  matcher.py  outreach.py  scanner.py  store.py
agent/llm/: base.py  openai_provider.py
agent/memory/: store.py
agent/profile/: extract.py  store.py
agent/tools/: base.py  browser_tool.py  calendar_tool.py  email_tool.py  example_tools.py  job_tool.py  outreach_tool.py  profile_tool.py  registry.py
scripts/: setup_google_oauth.py  setup_linkedin_session.py
tests/: conftest.py  test_brain.py  test_email_finder.py  test_example_tools.py  test_formatters.py  test_job_matcher.py  test_job_store.py  test_linkedin_cookie_session.py  test_memory_store.py  test_models.py  test_profile_extract.py  test_profile_store.py  test_rate_limiter.py  test_registry.py  test_tool_base.py  test_user_session.py
